added viewport and meta data

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Built - Software Consultancy and Design</title>
+    <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0;' name='viewport'>
+    <meta content='Software Consultancy and Design team based out of Dublin, Ireland' name='description'>
+    <meta content='dublin, tech, sofware consultancy, web design, app design, design, ireland, contractor, web development, mobile apps' name='keywords'>
+    <meta content='A Pub Crawl by Boat' name='og:title'>
     <link href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css' rel='stylesheet'>
     <link href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet'>
     <link href='/assets/css/main.css' rel='stylesheet'>
