--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta content='Talent 150 - Something different for leaders in HR and Recruitment' name='og:title'>
     <link href='//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css' rel='stylesheet'>
     <link href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet'>
-    <link href='/assets/css/main.css' rel='stylesheet'>
-    <link href='/bower_components/remodal/dist/jquery.remodal.css' rel='stylesheet'>
+    <link href='assets/css/main.css' rel='stylesheet'>
+    <link href='bower_components/remodal/dist/jquery.remodal.css' rel='stylesheet'>
   </head>
   <body>
     <div class='remodal-bg'>
@@ -47,9 +47,10 @@
       </header>
       <section>
         <div class='container'>
-          <h1></h1>
-          <p>Talent 150 helps you design and implement a product strategy across online platforms. We bring our experience building companies, operating within confined budgets and building for growth to our client projects. This site is under construction, but we're open for business. If you're interested in getting a site built, or checking out our porfolio - get in contact <a href="#">here.</a></p>
-          <img src='http://hire.ly/assets/img/black_background.jpg'>
+          <h1>A new conference for 150 leaders from Ireland's Recruitment and HR industry.</h1>
+          <p>Talent150's mission is to bring an entertaining, creative event to the HR and Recruitment industry in Ireland. We'll bring together established international names in HR, alongside innovative startups, academics and professionals. Each event will be framed around one of the problems facing HR professionals in Ireland today.</p>
+          <p>Above all, we'll always be different, and always fun.</p>
+          <img class='m-bottom-image' src='assets/images/chq-circle.png'>
         </div>
       </section>
       <footer>
